Progress elements need reattach on appearance change.

Dynamic changes to appearance to/from auto/none did not work.

Bug: 853558
Change-Id: I9486a0f3111555ba1975fe28cc58a54b2e20b71c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2276260
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#784645}